Bug 236520 - [GTK] [WPE] Fix problem when the buffer object is released before we try to send it to the compositor
Summary: [GTK] [WPE] Fix problem when the buffer object is released before we try to s...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: ANGLE (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Alejandro G. Castro
URL:
Keywords: InRadar
Depends on:
Blocks: DMA-BUF
  Show dependency treegraph
 
Reported: 2022-02-11 10:53 PST by Alejandro G. Castro
Modified: 2022-03-09 04:25 PST (History)
10 users (show)

See Also:


Attachments
Patch (3.55 KB, patch)
2022-02-11 11:00 PST, Alejandro G. Castro
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Alejandro G. Castro 2022-02-11 10:53:41 PST
This made the webgl/1.0.3/conformance/context/context-release-with-workers.html test and others crash or assert for debug.
Comment 1 Alejandro G. Castro 2022-02-11 11:00:47 PST
Created attachment 451728 [details]
Patch
Comment 2 EWS 2022-02-14 03:30:27 PST
Committed r289729 (247214@main): <https://commits.webkit.org/247214@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 451728 [details].
Comment 3 Radar WebKit Bug Importer 2022-02-14 03:31:18 PST
<rdar://problem/88896937>