[GTK] [WPE] Fix problem when the buffer object is released before we try to send it to the compositor https://bugs.webkit.org/show_bug.cgi?id=236520

Patch by Alejandro G. Castro <alex@igalia.com> on 2022-02-14
Reviewed by Žan Doberšek.

There is a layout test failing because the buffer object was
released before the swap buffers method was called and we were
calling the construction of the TextureMapperPlatformLayerDmabuf
with wrong data.

Fixes webgl/1.0.3/conformance/context/context-release-with-workers.html.

* platform/graphics/angle/GraphicsContextGLANGLE.h: Add the
isReleased function to the EGLImageBacking class.
* platform/graphics/nicosia/texmap/NicosiaGCGLANGLELayer.cpp: Ditto.
(Nicosia::GCGLANGLELayer::swapBuffersIfNeeded):
* platform/graphics/texmap/GraphicsContextGLTextureMapperANGLE.cpp:
(WebCore::GraphicsContextGLANGLE::EGLImageBacking::isReleased):
Bail out when the image backing was released.


Canonical link: https://commits.webkit.org/247214@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289729 268f45cc-cd09-0410-ab3c-d52691b4dbfc